hphp/hack/test/typecheck/legacy/pipe_in_static.php.exp
File "pipe_in_static.php", line 7, characters 15-31:
Initialization of class property must be a static literal expression. (Typing[4152])
