hphp/hack/test/typecheck/legacy/pipe_in_static.php
<?php

class C {
  public static function f($x) {
    return $x;
  }
  static $x = "foo" |> C::f($$);
}
